--- a/src/main/webapp/WEB-INF/views/dynamic/mainSidebar.jspf
+++ b/src/main/webapp/WEB-INF/views/dynamic/mainSidebar.jspf
@@ -111,7 +111,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href='<c:url value="/classroomList"/>' class="nav-link">
+                            <a href='<c:url value="/classrooms"/>' class="nav-link">
                                 <i class="nav-icon fas fa-door-open"></i>
                                 <p>Sale lekcyjne</p>
                             </a>
