--- a/src/main/webapp/WEB-INF/views/dynamic/js.jspf
+++ b/src/main/webapp/WEB-INF/views/dynamic/js.jspf
@@ -92,7 +92,7 @@
         )
 
         //Timepicker
-        $('#reservationdate,#permissionExpirationDate,#drivingLicenseExpirationDate,#dateEdit,#dateCreate,#dateCreateEmployee,#dateEditEmployee, #startCourseDate').datetimepicker({
+        $('#reservationdate,#permissionExpirationDate,#drivingLicenseExpirationDate,#dateEdit,#dateCreate,#dateCreateEmployee,#dateEditEmployee, #startCourseDate, #validityOfInsurance, #validityOfTechnicalReview').datetimepicker({
             format: 'YYYY-MM-DD'
         });
 
