r_js: fix js function delete

--- a/src/main/webapp/WEB-INF/views/dynamic/js.jspf
+++ b/src/main/webapp/WEB-INF/views/dynamic/js.jspf
@@ -112,5 +112,13 @@
             $(this).bootstrapSwitch('state', $(this).prop('checked'));
         });
 
+        //    function to delete modal
+        $('.table #deleteButton').on('click', function (event) {
+            event.preventDefault();
+            const href = $(this).attr('href');
+            $('#deleteModal #delRef').attr('href', href);
+            $('#deleteModal').modal();
+        });
+
     })
 </script>
