--- a/src/main/webapp/WEB-INF/views/dynamic/js.jspf
+++ b/src/main/webapp/WEB-INF/views/dynamic/js.jspf
@@ -92,8 +92,13 @@
         )
 
         //Timepicker
-        $('#reservationdate,#permissionExpirationDate,#drivingLicenseExpirationDate,#dateEdit,#dateCreate,#dateCreateEmployee,#dateEditEmployee, #startCourseDate, #validityOfInsurance, #validityOfTechnicalReview, #startNotice, #endNotice').datetimepicker({
+        $('#reservationdate, #permissionExpirationDate, #drivingLicenseExpirationDate, #dateEdit, #dateCreate, #dateCreateEmployee, #dateEditEmployee, #startCourseDate, #finishCourseDate, #validityOfInsurance, #validityOfTechnicalReview, #startNotice, #endNotice').datetimepicker({
             format: 'YYYY-MM-DD'
+        });
+
+        //Timepicker
+        $('#startCourseTime, #finishCourseTime').datetimepicker({
+            format: 'kk-mm'
         });
 
         //Bootstrap Duallistbox
