f-lectureClass: datetimepicker conf and employee relations conf

--- a/src/main/webapp/WEB-INF/views/dynamic/js.jspf
+++ b/src/main/webapp/WEB-INF/views/dynamic/js.jspf
@@ -98,7 +98,7 @@
 
         //Timepicker
         $('#lectureBegin, #lectureEnd').datetimepicker({
-            format: 'hh:mm'
+            format: 'HH:mm'
         });
 
         //Bootstrap Duallistbox
