--- a/src/main/webapp/WEB-INF/views/dynamic/mainSidebar.jspf
+++ b/src/main/webapp/WEB-INF/views/dynamic/mainSidebar.jspf
@@ -128,6 +128,12 @@
                                 <p>Pojazdy</p>
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a href='<c:url value="/messages"/>' class="nav-link">
+                                <i class="nav-icon fas fa-bullhorn"></i>
+                                <p>Ogłoszenia</p>
+                            </a>
+                        </li>
                     </ul>
                 </li>
                 <li class="nav-item has-treeview">
