f-studentAdmin: add readonly attributes for inputs and button which removes readonly attributes

--- a/src/main/webapp/WEB-INF/views/dynamic/js.jspf
+++ b/src/main/webapp/WEB-INF/views/dynamic/js.jspf
@@ -125,6 +125,17 @@
             $('#deleteModal').modal();
         });
 
+        // button to remove readonly attribute
+        $('input[type=button]').click(function () {
+
+            $('input[type=text]')
+                .not("#creationDate")
+                .not("#modificationDate")
+                .removeAttr('readonly');
+            $("#mail").removeAttr('readonly');
+        })
+
+
 
     })
 </script>
