--- a/src/main/webapp/WEB-INF/views/dynamic/header.jspf
+++ b/src/main/webapp/WEB-INF/views/dynamic/header.jspf
@@ -1,9 +1,11 @@
+<%@ page contentType="text/html; charset=UTF-8" %>
+
 <nav class="main-header navbar navbar-expand navbar-white navbar-light">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i
-                    class="fas fa-arrow-circle-left"></i></a>
+                    class="fas fa-arrow-circle-left"></i> &ensp; Szkoła Prawa Jazdy | School Driving Application </a>
         </li>
     </ul>
     <ul class="navbar-nav ml-auto">
